[gd_scene load_steps=5 format=3 uid="uid://blgfu0ws1xb63"]

[ext_resource type="Script" uid="uid://bun2b3la0ao2d" path="res://Nodes/platform_moving.gd" id="1_cjib8"]
[ext_resource type="Texture2D" uid="uid://cjx2ufas6n4x" path="res://Graphics/Backgrounds/misc/glass cup.png" id="2_cjib8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vspyu"]
size = Vector2(152, 336)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l11fb"]
size = Vector2(152, 24)

[node name="GlassCup" type="Node2D"]
script = ExtResource("1_cjib8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(77, -168)
texture = ExtResource("2_cjib8")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(136, -120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-59, -48)
shape = SubResource("RectangleShape2D_vspyu")

[node name="Teleporter" type="Area2D" parent="."]
position = Vector2(72, -344)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleporter"]
position = Vector2(4, -4)
shape = SubResource("RectangleShape2D_l11fb")

[connection signal="area_entered" from="Teleporter" to="." method="_on_teleporter_area_entered"]
[connection signal="area_exited" from="Teleporter" to="." method="_on_teleporter_area_exited"]
